# StickyNote-Plus-Plus

./: CMakeLists.txt  readme.md  version.hpp
CMake/: Mod.cmake
Doc/: v0.9版本开发计划.md  历史记录界面.md  如何增加一个自定义的StickyNote.md  富文本编辑器.md  开发任务.md  开发计划.md  框架修改.md
GlobalShortcut/: CMakeLists.txt
GlobalShortcut/gui/: qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_p.h  qxtglobalshortcut_win.cpp
Gui/: ActionCommand.cpp  ActionCommand.h  ActionCommandStateTimer.cpp  ActionCommandStateTimer.h  AppIcon.aps  AppIcon.rc  AutoVersion.cpp  AutoVersion.h  CMakeLists.txt  ColorWidget.cpp  ColorWidget.h  CompatibilityTool.cpp  CompatibilityTool.h  DiversityContent.cpp  DiversityContent.h  DiversityItem.h  EventManager.cpp  EventManager.h  EventSender.cpp  EventSender.h  Form - untitled  HistoryWidget.cpp  HistoryWidget.h  NoteTextEdit.cpp  NoteTextEdit.h  ProcessCommunication.cpp  ProcessCommunication.h  Setting.cpp  Setting.h  SettingUI.cpp  SettingUI.h  SettingUI.ui  StickyNote.cpp  StickyNote.h  StickyNoteContent.cpp  StickyNoteContent.h  StickyNoteContentChangeEvent.h  StickyNoteDiversity.cpp  StickyNoteDiversity.h  StickyNoteFactory.cpp  (+32 more)
Gui/qss/: GuiStyle.qss
Gui/translate/: StickyNoteGui.qm  StickyNoteGui.ts
Log/: CMakeLists.txt
Log/src/: LogBuffer.cpp  LogBuffer.h  LogExport.hpp  LogTool.cpp  LogTool.h  cpp_log.cpp  cpp_log.h  main.cpp
OriginUI/: Action.cpp  Action.h  CMakeLists.txt  DelayDialog.cpp  DelayDialog.h  DelayDialog.ui  DrawerWidgetReverse.cpp  DrawerWidgetReverse.h  DrawerWidgetTraceMouse.cpp  DrawerWidgetTraceMouse.h  EditLable.cpp  EditLable.h  ExportConfig.hpp  InputLineEdit.cpp  InputLineEdit.h  KeyboardLineEdit.cpp  KeyboardLineEdit.h  KeyboardToString.hpp  NativeWindowTemplate.hpp  NavigationBar.cpp  NavigationBar.h  RichTextEdit.h  SimpleRichTextEdit.cpp  SimpleRichTextEdit.h  TempTextEdit.cpp  TempTextEdit.h  ToolBar.cpp  ToolBar.h  ToolButtonColor.cpp  ToolButtonColor.h  WidgetNoBoder.cpp  WidgetNoBoder.h  WindowNoBoder.cpp  WindowNoBoder.h  circleSwitch.cpp  circleSwitch.h  drawerWidget.cpp  drawerWidget.h  main.cpp  resource.qrc  (+2 more)
StickyNoteFile/: CMakeLists.txt  ExportConfig.hpp  ImageSave.cpp  ImageSave.h  NoteFile.cpp  NoteFile.h  Property.cpp  Property.h  Setting.cpp  Setting.h
WinApiPackage/: CMakeLists.txt  FindWindow.c  FindWindow.h  PCStartRun.c  PCStartRun.h  SetWindowState.c  SetWindowState.h  WinApiExport.h  main.cpp
xml/: CMakeLists.txt  pugixml.hpp
